--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
             name="description"
-            content="Browse the internet securely and privately."
+            content="Browse the internet securely and privately. -jacob"
         />
         <script src="/chemical.js"></script>
     </head>
